--- a/package.json
+++ b/package.json
@@ -1,19 +1,26 @@
 {
-  "name": "task-webpack-js",
-  "version": "1.0.0",
-  "description": "Proyecto Task-Webpack",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/vlen2r/Task-Webpack-JS.git"
-  },
-  "author": "Valentin Romero",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/vlen2r/Task-Webpack-JS/issues"
-  },
-  "homepage": "https://github.com/vlen2r/Task-Webpack-JS#readme"
+    "name": "task-webpack-js",
+    "version": "1.0.0",
+    "description": "Proyecto Task-Webpack",
+    "main": "index.js",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "build:dev": "webpack --config webpack.dev.js"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/vlen2r/Task-Webpack-JS.git"
+    },
+    "author": "Valentin Romero",
+    "license": "ISC",
+    "bugs": {
+        "url": "https://github.com/vlen2r/Task-Webpack-JS/issues"
+    },
+    "homepage": "https://github.com/vlen2r/Task-Webpack-JS#readme",
+    "devDependencies": {
+        "html-loader": "^2.1.2",
+        "html-webpack-plugin": "^5.3.2",
+        "webpack": "^5.40.0",
+        "webpack-cli": "^4.7.2"
+    }
 }
