--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "main": "index.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "build:dev": "webpack --config webpack.dev.js"
+        "build:dev": "webpack --config webpack.dev.js",
+        "start": "webpack serve --config webpack.dev.js --open --port=8080"
     },
     "repository": {
         "type": "git",
@@ -21,6 +22,7 @@
         "html-loader": "^2.1.2",
         "html-webpack-plugin": "^5.3.2",
         "webpack": "^5.40.0",
-        "webpack-cli": "^4.7.2"
+        "webpack-cli": "^4.7.2",
+        "webpack-dev-server": "^3.11.2"
     }
 }
