--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "css-loader": "^5.2.6",
         "html-loader": "^2.1.2",
         "html-webpack-plugin": "^5.3.2",
+        "mini-css-extract-plugin": "^1.6.0",
         "style-loader": "^2.0.0",
         "webpack": "^5.40.0",
         "webpack-cli": "^4.7.2",
