--- a/package.json
+++ b/package.json
@@ -22,11 +22,13 @@
     "devDependencies": {
         "copy-webpack-plugin": "^9.0.0",
         "css-loader": "^5.2.6",
+        "css-minimizer-webpack-plugin": "^3.0.1",
         "file-loader": "^6.2.0",
         "html-loader": "^2.1.2",
         "html-webpack-plugin": "^5.3.2",
         "mini-css-extract-plugin": "^1.6.0",
         "style-loader": "^2.0.0",
+        "terser-webpack-plugin": "^5.1.3",
         "webpack": "^5.40.0",
         "webpack-cli": "^4.7.2",
         "webpack-dev-server": "^3.11.2"
